# QtVanity

./: .gitignore  CMakeLists.txt  README.md
cmake/: deploy_qt5_macos.cmake.in  deploy_qt5_windows.cmake.in
examples/ExampleWidgetPlugin/: CMakeLists.txt  ExampleWidgetPlugin.cpp  ExampleWidgetPlugin.h  examplewidgetplugin.json
resources/: Info.plist.in
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/editor/: ColorSwatchOverlay.cpp  ColorSwatchOverlay.h  FindReplaceBar.cpp  FindReplaceBar.h  QssEditor.cpp  QssEditor.h  QssSyntaxHighlighter.cpp  QssSyntaxHighlighter.h  SettingsManager.cpp  SettingsManager.h  StyleManager.cpp  StyleManager.h  ThemeManager.cpp  ThemeManager.h  VariableManager.cpp  VariableManager.h  VariablePanel.cpp  VariablePanel.h
src/gallery/: AdvancedPage.cpp  AdvancedPage.h  ButtonsPage.cpp  ButtonsPage.h  ContainersPage.cpp  ContainersPage.h  CustomWidgetsPage.cpp  CustomWidgetsPage.h  DialogsPage.cpp  DialogsPage.h  DisplayPage.cpp  DisplayPage.h  GalleryPage.cpp  GalleryPage.h  InputsPage.cpp  InputsPage.h  MainWindowPage.cpp  MainWindowPage.h  ViewsPage.cpp  ViewsPage.h  WidgetGallery.cpp  WidgetGallery.h
src/plugins/: PluginManager.cpp  PluginManager.h  PluginMetadata.h  WidgetPluginInterface.h
styles/: dark.qss  dark.qvp  light.qss  outrun.qvp  shadcn.css  shadcn.qss  shadcn.qvp  solarized.qss  solarized.qvp  spotify.qss  spotify.qvp  vscode-light.qvp
tests/: test_advancedpage.cpp  test_advancedpage.h  test_containerspage.cpp  test_containerspage.h  test_customwidgetspage.cpp  test_customwidgetspage.h  test_customwidgetspage_standalone.cpp  test_dialogspage.cpp  test_dialogspage.h  test_displaypage.cpp  test_displaypage.h  test_findreplacebar.cpp  test_findreplacebar.h  test_inputspage.cpp  test_inputspage.h  test_main.cpp  test_mainwindow.cpp  test_mainwindow.h  test_mainwindowpage.cpp  test_mainwindowpage.h  test_pluginmanager.cpp  test_pluginmanager.h  test_pluginmanager_standalone.cpp  test_qsseditor.cpp  test_qsseditor.h  test_qsssyntaxhighlighter.cpp  test_qsssyntaxhighlighter.h  test_settingsmanager.cpp  test_settingsmanager.h  test_settingsmanager_standalone.cpp  test_stylemanager.cpp  test_stylemanager.h  test_thememanager.cpp  test_thememanager.h  test_variablemanager.cpp  test_variablemanager.h  test_variablepanel.cpp  test_variablepanel.h  test_widgetgallery.cpp  test_widgetgallery.h
